--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "logs:prod": "heroku logs --tail"
   },
+  "proxy": "http://localhost:3001",
   "author": "Erik Forsman",
   "license": "ISC",
   "dependencies": {
